Blog post image overflow fix

--- a/src/less/molecule/m-block.less
+++ b/src/less/molecule/m-block.less
@@ -365,6 +365,8 @@
   img {
     margin-top: 20px;
     // margin-bottom: 20px;
+    max-width: 100%;
+    height: auto;
   }
 
   // Large img-size in the wysiwyg-editor
